<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:collapseIcon="@drawable/ic_baseline_sort"
        android:background="@color/black_primary"
        app:titleTextColor="@color/white"
        android:pointerIcon="text"
        app:title="@string/your_notes">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/material_pattern_dimension"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_sort"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_layout_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/rg_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/string_title"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginHorizontal="5dp"
                android:text="@string/string_date"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/string_color"/>

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_order_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rg_order"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:checked="true"
                android:text="@string/string_ascending"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/string_descending"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/cl_layout_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/note_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_pattern_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_add"
        android:contentDescription="@string/description_button_add_note"/>




</androidx.constraintlayout.widget.ConstraintLayout>